[package]
name = "htot-conv-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hierarchical-Tree Outline Text Converter - Rust port of htot_conv"
repository = "https://github.com/yourusername/htot-conv-rs"
documentation = "https://docs.rs/htot-conv-rs"
readme = "README.md"
keywords = ["outline", "converter", "xlsx", "hierarchical", "tree"]
categories = ["command-line-utilities", "parsing"]
include = ["src/**/*", "Cargo.toml", "README.md", "docs/image/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
regex = "1.10"
rust_xlsxwriter = "0.90.0"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
quick-xml = { version = "0.38.2", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
umya-spreadsheet = "2.3.1"
